objects/Rule_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order of Rule Assignment</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Rule_Statement__c</fullName>
        <description>For concatenate the program rule fields</description>
        <formula>Program_Rule__r.Field_To_Compare_1__c&amp;&quot; &quot;&amp;TEXT(Program_Rule__r.Operator__c)&amp;&quot; &quot;&amp;Program_Rule__r.Field_To_Compare_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Rule Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Rule__c</fullName>
        <label>Program Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program_Rule__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program_Rule__c</referenceTo>
        <relationshipLabel>Rule Assignment</relationshipLabel>
        <relationshipName>Rule_Assignment</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Rule Assignment</relationshipLabel>
        <relationshipName>Rule_Assignment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Rule Assignment</label>
    <nameField>
        <displayFormat>RA{00000000}</displayFormat>
        <label>Rule Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>